fix spacing on desktop

--- a/src/sass/tablet.scss
+++ b/src/sass/tablet.scss
@@ -15,7 +15,6 @@
   }
 
   .eapp-structure-wrap .eapp-structure-row .eapp-structure-right {
-    padding: 1.5rem;
     // Saved indicator
     .saved-indicator {
       position: static;
